fix profile text-overflow

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -39,6 +39,9 @@
   line-height: 1.14;
   text-align: left;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__edit-button {
@@ -58,6 +61,9 @@
   line-height: 1.22;
   text-align: left;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__add-button {
